--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -2,10 +2,11 @@
   display: flex;
   width: 100%;
   min-height: 600px;
-  padding: 40px 0;
+  padding: 0px 0;
 }
 
-.left-section, .right-section {
+.left-section,
+.right-section {
   flex: 1;
   padding: 20px;
 }
@@ -20,7 +21,7 @@
   margin-top: 40px;
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 30px;
 }
 
 .profile-picture {
@@ -44,12 +45,12 @@
 
 .greeting p {
   font-size: 35px;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
 }
 
 .greeting h1 {
   font-size: 40px;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   white-space: nowrap;
   display: inline-block;
   position: relative;
@@ -59,13 +60,22 @@
 }
 
 @keyframes typing {
-  from { width: 0; }
-  to { width: 65%; }
+  from {
+    width: 0;
+  }
+  to {
+    width: 65%;
+  }
 }
 
 @keyframes blink-caret {
-  from, to { border-color: transparent; }
-  50% { border-color: white; }
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
 }
 
 #sobre {
@@ -80,15 +90,15 @@
 .right-section h2 {
   text-align: center;
   font-size: 35px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   margin-top: -20px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .right-section p {
   font-size: 17.5px;
   line-height: 3.2;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
 }
 
 .contact-button {
@@ -105,7 +115,7 @@
   transition: transform 0.1s, box-shadow 0.1s, background-color 0.3s;
   text-decoration: none;
   color: white;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
 }
 
 .contact-button img {
